# pBGSK

./: .gitignore  README  README.md  fs-pbgsk (3).ipynb  pyproject.toml  readme  requirements.txt
notebooks/: benchmark.ipynb  experiments.ipynb  expirements.ipynb  fs-pbgsk (3).ipynb  fs-pbgsk.ipynb
src/utils/: data_importer.ipynb  data_importer.py  data_importer_n.ipynb  pBGSK.py
tests/: memory.py  memory_limit.txt  test_memory.py  test_pBGSK.py
