[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pbgsk"
version = "0.1.0"
description = "Population based Binary Gaining–Sharing Knowledge-based Optimization for Feature Selection"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Romulo" }
]
dependencies = [
    "ucimlrepo",
    "scikit-learn",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "nbconvert",
    "nbformat"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RET"]
ignore = []
